apps/base/influxdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: influxdb
  labels:
    app: influxdb
spec:
  type: ClusterIP
  selector:
    app: influxdb
  ports:
    - name: http
      protocol: TCP
      port: 8086
      targetPort: http
